gitops/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: java-demo
  labels:
    app: java-demo
    app.kubernetes.io/component: java-demo
    app.kubernetes.io/instance: java-demo
    app.kubernetes.io/name: java-demo
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-demo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: java-demo
        deployment: java-demo
    spec:
      containers:
        - name: java-demo
          image: 'image-registry.openshift-image-registry.svc:5000/dev/java-demo:1.1'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
